Expand build infrastructure
Signed-off-by: Benjamin Crawford <crawford.benjamin15@gmail.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,3 @@
 all:
-	gcc -Wall -Wpedantic -Werror -std=c99 extbuffer.c -c -o extbuffer.o
+	$(CC) -Wall -Wpedantic -Werror -std=c99 -I"../include" extbuffer.c -c -o ../build/out/extbuffer.o
+	ar crs ../build/lib/libextbuffer.a ../build/out/extbuffer.o
