Correct memory errors as reported by Valgrind
Signed-off-by: Benjamin Crawford <crawford.benjamin15@gmail.com>

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -2,4 +2,9 @@ LINK_DIRS := "../build/lib"
 LINK_LIB  := extbuffer
 
 ../build/examples/simple_test:
-	$(CC) -Wall -Wpedantic -Werror -std=c99 -L$(LINK_DIRS) -I"../include" simple_test/simple_test.c -o ../build/examples/simple_test -l$(LINK_LIB)
+	$(CC) -Wall -Wpedantic -Werror -std=c99 -L$(LINK_DIRS) -I"../include" simple_test/simple_test.c -g -O0 -o ../build/examples/simple_test -l$(LINK_LIB)
+
+.PHONY: clean
+
+clean:
+	rm ../build/examples/simple_test
