Add flags to tests Makefile
Signed-off-by: Benjamin Crawford <crawford.benjamin15@gmail.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,5 @@
 LINKER_FLAGS := -L"../build/lib" -lextbuffer $(shell pkg-config --libs check)
-CC_FLAGS     := -std=c99 -O2 -I"../include" $(shell pkg-config --cflags check)
+CC_FLAGS     := -std=c99 -Wall -Wpedantic -Werror -O2 -I"../include" $(shell pkg-config --cflags check)
 
 build/expand:
 	$(CC) $(CC_FLAGS) expand/expand.c -o $@ $(LINKER_FLAGS)
@@ -7,3 +7,6 @@ build/expand:
 all:
 	mkdir build
 	$(MAKE) build/expand
+
+clean:
+	rm -r build
