--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -13,7 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      
+    - name: Create Build Directories
+      run: mkdir -p build/{out,lib,examples}  
     - name: Make Library
       working-directory: ./src
       run: make all
