--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -27,7 +27,5 @@ jobs:
       working-directory: ./tests
       run: make all
     - name: Run Tests
-      working-directory: ./build/tests
-      run: |
-        chmod +x expand
-        ./expand
+      working-directory: ./tests
+      run: make run_tests
